force-app/main/default/objects/Individual_Grade_Item__c/Individual_Grade_Item__c.object-meta.xml
<CustomObject>
    <description>The grading item for individual enrollment grade.</description>
    <label>Individual Grade Item</label>
    <nameField>
        <label>Individual Grade Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Grade Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>