force-app/main/default/objects/Individual_Grade_Item__c/fields/Individual_Enrollment_Grade__c.field-meta.xml
<CustomField>
    <fullName>Individual_Enrollment_Grade__c</fullName>
    <label>Individual Enrollment Grade</label>
    <referenceTo>Individual_Enrollment_Grade__c</referenceTo>
    <relationshipLabel>Individual Grade Items</relationshipLabel>
    <relationshipName>Individual_Grade_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>