force-app/main/default/objects/Individual_Grade_Item__c/fields/Study_Grade_Item__c.field-meta.xml
<CustomField>
    <fullName>Study_Grade_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Grade Item</label>
    <referenceTo>Study_Grade_Item__c</referenceTo>
    <relationshipLabel>Individual Grade Items</relationshipLabel>
    <relationshipName>Individual_Grade_Items</relationshipName>
    <type>Lookup</type>
</CustomField>