force-app/main/default/objects/Individual_Grade_Item__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>