force-app/main/default/objects/Individual_Grade_Item__c/fields/Weighted_Grade__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Grade__c</fullName>
    <formula>Final_Numerical_Grade__c  *  Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Grade</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>